--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
   db:
     image: timescale/timescaledb-ha:pg17
     environment:
-      POSTGRES_PASSWORD: postgres
+      - POSTGRES_USER=geneseslabs
+      - POSTGRES_PASSWORD=geneseslabs
+      - POSTGRES_DB=geneseslabs
     ports:
       - "5499:5432"
     volumes:
